# TuzunCppProjects

./: .gitignore  README.md
CombinCommon/: CMakeLists.txt
CombinCommon/include/CombinCommon/: BinomCoeffTable.h  KComposition.h  Speedometric.h  buildSomeFilteredTransformedCompositions.h  findCompositionsWithFilter.h
CombinCommon/src/: BinomCoeffTable.cpp  KComposition.cpp  Speedometric.cpp  buildSomeFilteredTransformedCompositions.cpp  findCompositionsWithFilter.cpp
JonesConjecNonAlg/: CMakeLists.txt
JonesConjecNonAlg/BlkbdJonesConjNonAlg/: CMakeLists.txt
JonesConjecNonAlg/BlkbdJonesConjNonAlg/include/JonesConjecNonAlg/BlkbdJonesConjNonAlg/: BlkbdPolyhPrec.h  BlkbdRunParamsNonAlg.h  GetPointerPolyhPrec.h  GetPointerRunParamsNonAlg.h
JonesConjecNonAlg/BlkbdJonesConjNonAlg/src/: BlkbdPolyhPrec.cpp  BlkbdRunParamsNonAlg.cpp  GetPointerPolyhPrec.cpp  GetPointerRunParamsNonAlg.cpp
JonesConjecNonAlg/JonesConjNonAlg/: CMakeLists.txt
JonesConjecNonAlg/JonesConjNonAlg/include/JonesConjecNonAlg/JonesConjNonAlg/: I_InitializerNonAlg.h  I_JonesConjNonAlgApp.h  InitializerNonAlg.h  JonesConjNonAlgApp.h  JonesConjNonAlgCompRoot.h
JonesConjecNonAlg/JonesConjNonAlg/src/: InitializerNonAlg.cpp  JonesConjNonAlg.cpp  JonesConjNonAlgApp.cpp  JonesConjNonAlgCompRoot.cpp
JonesConjecNonAlg/PartialKnotSpec/: CMakeLists.txt
JonesConjecNonAlg/PartialKnotSpec/include/JonesConjecNonAlg/PartialKnotSpec/: CandidateCtSpecBuilder.h  CtSpecFilter.h  I_CandidateCtSpecBuilder.h  I_CtSpecFilter.h  I_LargeNcSpecBuilder.h  I_MediumNcSpecBuilder.h  I_NcSpecBuilder.h  I_NcSpecBuilderWrapper.h  I_NcSpecManager.h  I_PartialKnotSpecManager.h  I_PartitionBuilder.h  I_PartitionBuilderWrapper.h  I_RepresentativeChecker.h  I_SmallNcSpecBuilder.h  LargeNcSpecBuilder.h  LargeNcSpecManager.h  MediumNcSpecBuilder.h  MediumNcSpecManager.h  NcPartitionChunkPrepper.h  NcSpecBuilder.h  NcSpecBuilderWrapper.h  NcSpecItems.h  NcSpecManager.h  PartialKnotSpecManager.h  PartialKnotSpecStructures.h  PartitionBuilder.h  PartitionBuilderWrapper.h  RepresentativeChecker.h  SmallNcSpecBuilder.h  SmallNcSpecManager.h  SomeSizeNcSpecManager.h  periodWithRespectToMaximumElements.h
JonesConjecNonAlg/PartialKnotSpec/src/: .PartitionBuilder.cpp.swp  CandidateCtSpecBuilder.cpp  CtSpecFilter.cpp  LargeNcSpecBuilder.cpp  LargeNcSpecManager.cpp  MediumNcSpecBuilder.cpp  MediumNcSpecManager.cpp  NcPartitionChunkPrepper.cpp  NcSpecBuilder.cpp  NcSpecBuilderWrapper.cpp  NcSpecManager.cpp  PartialKnotSpecManager.cpp  PartitionBuilder.cpp  PartitionBuilderWrapper.cpp  RepresentativeChecker.cpp  SmallNcSpecBuilder.cpp  SmallNcSpecManager.cpp  periodWithRespectToMaximumElements.cpp  pieces  pieces2
JonesConjecNonAlg/Polyh/: CMakeLists.txt
JonesConjecNonAlg/Polyh/include/JonesConjecNonAlg/Polyh/: I_PolyhManager.h  PolyhManager.h
JonesConjecNonAlg/Polyh/src/: PolyhManager.cpp
JonesConjecNonAlg/PolyhPrec/: CMakeLists.txt
JonesConjecNonAlg/PolyhPrec/include/JonesConjecNonAlg/PolyhPrec/: I_PolyhPrecManager.h  PolyhPrecManager.h
JonesConjecNonAlg/PolyhPrec/src/: PolyhPrecManager.cpp
KnotCommon/: CMakeLists.txt
KnotCommon/BlkbdKnot/: CMakeLists.txt
KnotCommon/BlkbdKnot/include/KnotCommon/BlkbdKnot/: BlkbdPolyhData.h  getPointerPolyhData.h
KnotCommon/BlkbdKnot/src/: BlkbdPolyhData.cpp  getPointerPolyhData.cpp
KnotCommon/InputOutput/: CMakeLists.txt
KnotCommon/InputOutput/include/KnotCommon/InputOutput/: EmbedReader.h  I_EmbedReader.h  I_PolyhedronReader.h  PolyhedronReader.h  getNumPolyh.h
KnotCommon/InputOutput/src/: EmbedReader.cpp  PolyhedronReader.cpp  getNumPolyh.cpp
KnotCommon/InputOutput/test/: CMakeLists.txt
KnotCommon/InputOutput/test/EmbedReader/: CMakeLists.txt  a.x  in.10  in.6  in.8
KnotCommon/InputOutput/test/EmbedReader/src/: testEmbedReader.cpp
KnotCommon/KnotGraph/: CMakeLists.txt
KnotCommon/KnotGraph/include/KnotCommon/KnotGraph/: ConwayLikeGraph.h  ConwayLikeGraphFactory.h  I_ConwayLikeGraph.h  I_ConwayLikeGraphFactory.h  I_LoopCountGraph.h  LoopCountGraph.h
KnotCommon/KnotGraph/src/: ConwayLikeGraph.cpp  ConwayLikeGraphFactory.cpp  LoopCountGraph.cpp
KnotCommon/KnotGraph/test/: CMakeLists.txt
KnotCommon/KnotGraph/test/AdmitsKnot/: CMakeLists.txt
KnotCommon/KnotGraph/test/AdmitsKnot/src/: testAdmitsKnot.cpp
MathCommon/: CMakeLists.txt
MathCommon/include/MathCommon/: UndirectedGraph.h  UndirectedGraphTypeDefs.h  UndirectedPlanarGraph.h  integerFactorsOf.h
MathCommon/src/: UndirectedGraph.cpp  UndirectedPlanarGraph.cpp  integerFactorsOf.cpp
TuzunUtil/: CMakeLists.txt
TuzunUtil/include/TuzunUtil/: Blackboard.h  CppDatatypes.h  I_Blackboard.h  sortByRank.h
TuzunUtil/src/: Blackboard.cpp
TuzunUtil/test/: CMakeLists.txt
TuzunUtil/test/Blackboard/: CMakeLists.txt
TuzunUtil/test/Blackboard/include/: A.h  BlackboardTester.h
TuzunUtil/test/Blackboard/src/: A.cpp  BlackboardTester.cpp  testBlackboard.cpp
